apps/personal-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
        - name: rooty-dev
          image: harbor.rooty.dev/cluster/rooty-dev:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: personal-site
spec:
  selector:
    app: personal-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
