apps/personal-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: personal-site
spec:
  routes:
    - match: Host(`rooty.dev`)
      kind: Rule
      services:
        - name: personal-site
          port: 80
    - match: Host(`k8s.rooty.dev`)
      kind: Rule
      services:
          - name: personal-site
            port: 80
    - match: Host(`www.rooty.dev`)
      kind: Rule
      services:
          - name: personal-site
            port: 80
    - match: Host(`www.k8s.rooty.dev`)
      kind: Rule
      services:
          - name: personal-site
            port: 80
  tls:
    secretName: rooty-dev-wildcard
